--- a/Lavalink/docker-compose.music.yml
+++ b/Lavalink/docker-compose.music.yml
@@ -8,4 +8,4 @@ services:
         ports:
             - 2333:2333 # you only need this if you want to make your lavalink accessible from outside of containers
 
-        
+        restart: always
